# django_mailing

./: .env_example  README.md  pyproject.toml
blog/: models.py  urls.py  views.py
blog/migrations/: 0001_initial.py
blog/templates/blog/: blog_detail.html  blog_list.html
config/: settings.py  urls.py
fixtures/: auth_data.json  blog_data.json  group_data.json  mailing_data.json  users_data.json
mailing/: admin.py  apps.py  forms.py  models.py  services.py  urls.py  views.py
mailing/management/commands/: mailing_scheduler.py  runapscheduler.py
mailing/migrations/: 0001_initial.py  0002_alter_loggingmailing_status_attempt_and_more.py  0003_alter_loggingmailing_status_attempt.py  0003_mailing_end_mailing_mailing_next_mailing.py  0004_alter_mailing_clients.py  0004_alter_mailing_status_mailing.py  0005_alter_client_comment_alter_client_first_name_and_more.py  0005_remove_mailing_end_mailing.py  0006_alter_client_comment_alter_client_first_name_and_more.py  0006_mailing_is_active_alter_mailing_status_mailing.py  0007_alter_client_comment_alter_client_first_name_and_more.py  0007_remove_mailing_next_mailing.py  0008_alter_client_comment_alter_client_first_name_and_more.py  0008_client_owner_mailing_owner_message_owner.py  0009_alter_loggingmailing_mailing.py  0009_alter_mailing_clients.py  0010_alter_mailing_owner.py
static/css/: bootstrap.min.css
static/js/: bootstrap.bundle.min.js
users/: forms.py  models.py  urls.py  views.py
users/migrations/: 0001_initial.py  0002_alter_user_options_remove_user_username_user_avatar_and_more.py  0003_user_token.py
(+23 files in other folders)
